# qcom_hexagon_sdk

./: .gitignore  Launch Hexagon IDE  readme.txt  setup_sdk_env.source
Uninstall_Hexagon_SDK/: InstallScript.iap_xml  Uninstall Qualcomm Hexagon SDK 3.5.4   Uninstall Qualcomm Hexagon SDK 3.5.4 .lax  installvariables.properties
Uninstall_Hexagon_SDK/InstData/: InstalledMedias.properties  MediaFiles.properties  MediaId.properties
docs/: APIs_Async Message Queue.html  APIs_DSP Clk & Rsrc Mgmt.html  APIs_Dynamic Loading.html  APIs_FastRPC.html  Applications_Compute offload.html  Common_Rpcperf.html  DSP Concurrency.html  DSP Power & Perf.html  Debugging_Connect to Device.html  Debugging_Exceptions.html  Debugging_Message Logging.html  Debugging_Simulator.html  Debugging_Target.html  Dependencies_Common.html  Environments_Build System Porting.html  Environments_Build System.html  Environments_Hexagon IDE.html  Examples_Common.html  Examples_ComputeHVX.html  Examples_GeneralOverview.html  FAQ_Common.html  FAQ_Dynamic Loading.html  FAQ_FastRPC.html  FAQ_Hexagon IDE.html  FastRPC_Capability_API.html  FastRPC_DSP_Thread_Params.html  FastRPC_QoS.html  HAP_mem.html  HAP_pmu_apis.html  HAP_power_set_application_type.html  HVX Resource Manager.html  Hap_power_set_dcvs_2.html  Hap_power_set_dcvs_3.html  InstallAnywhere.html  Introduction to FastRPC Debugging.html  L2 Cache Locking.html  Memory Management.html  Platforms_HLOS.html  Platforms_Simulator.html  Platforms_Target.html  (+52 more)
docs/Audio/: Applications.html  Examples.html  TestingAudioOnTarget.html  TestingAudioUnitTests.html  audio_calibration_using_app.html  audio_overview.html  audio_target_testing_qact.html
docs/CAPIv2/: APPI_to_CAPIv2 Migration.html  CAPIv2_Introduction.html  Testing_CAPIv2 Unit Tests.html
docs/Camera streaming/: Applications.html  Applications_legacy.html  Examples.html  Examples_legacy.html
docs/FastCV/: Image Downscale.html  (+3 more)
examples/common/benchmark_v65/: CMakeLists.txt  Makefile  UbuntuARM.min  UbuntuARM_deps.min  android.min  benchmark_v65_walkthrough.py  build.cmd  cmake_build.bash  cmake_build.cmd  config.py  hexagon.min  hexagon_deps.min  hexagon_trace_analyzer_instructions.txt  install_sdm845.cmd  readme.txt  run_benchmark.cmd  ship.cmd
examples/common/benchmark_v65/asm_src/: bilateral.S  conv3x3a32_asm.S  epsilon.S  integrate_asm.S
examples/common/benchmark_v65/inc/: benchmark.idl
examples/common/benchmark_v65/src_app/: benchmark.c  benchmark_ref.h  crash10_ref.c  dilate5x5_ref.c  fft_ref.c  integrate_ref.c  scatter_gather_ref.c  sobel3x3_ref.c  warp_ref.cpp
examples/common/benchmark_v65/src_dsp/: benchmark_asm.h  benchmark_imp.c  bilateral_imp.c  conv3x3a32_autovec.c  conv3x3a32_imp.c  crash10_imp.c  dilate3x3_imp.c  dilate5x5_imp.c  epsilon_imp.c  fast9_imp.c  fft1024.h  fft_imp.c  gaussian7x7_imp.c  hvx_util.h  integrate_imp.c  q6cache.h  scatter_gather_imp.c  sobel3x3_asm.h  sobel3x3_imp.c  warp_imp.cpp
examples/common/calculator/: CMakeLists.txt  UbuntuARM.min  WinARM_rules.min  android.min  android_deps.min  calculator_walkthrough.py  cmake_build.bash  cmake_build.cmd  hexagon.min  hexagon_deps.min  mingw_rules.min  qnx.min  qnx_deps.min  winARM_deps.min
examples/common/calculator/eclipse/calculator/: calculator.launch
examples/common/calculator/eclipse/calculator_64/: calculator_64.launch
examples/common/calculator/eclipse/libcalculator_skel/: libcalculator_skel.launch
examples/common/calculator/inc/: calculator.idl
examples/common/calculator/src/: calculator_imp.c  calculator_main.c  calculator_test.c
examples/common/calculator_c++_app/app/: CMakeLists.txt  build.gradle  hexagon_helper.cmake
examples/common/calculator_c++_app/app/inc/: calculator.idl
examples/common/calculator_c++_app/app/src/main/cpp/: calculator-jni.cpp
examples/common/calculator_c++_app/app/src/main/java/com/example/qualcomm/calculator/: DisplayResult.java  MainCalculator.java
examples/common/calculator_c++_app/app/src/main/res/layout/: activity_display_result.xml  activity_main_calculator.xml
examples/common/calculator_c++_app/app/src/main/res/values/: strings.xml
incs/: HAP_compute_res.h  HAP_debug.h  HAP_farf.h  HAP_fs.h  HAP_mem.h  HAP_pd_dtor.h  HAP_perf.h  HAP_pls.h  HAP_power.h  HAP_ps.h  HAP_sysmon_rm_qos.h  HAP_traceme.h  HAP_user_pmu.h  HAP_vtcm_mgr.h  adsp_mmap.h  hvx_resmgr.h  remote.h  remote.idl  remote64.h  sysmon_cachelock.h  sysmon_marker.h  verify.h  version.h
libs/common/atomic/: CMakeLists.txt  Makefile  cmake_build.bash  rel.min
libs/common/atomic/hexagon_Debug_dynamic_toolv83_v66/: atomic.o.dep  atomic_a_archiver.txt  atomic_q  atomic_q.o.dep  atomic_q_link.txt  cae.o.dep  pmu_stats.txt  q6ss.cfg
libs/common/atomic/hexagon_Debug_dynamic_toolv83_v66/ship/: AEEatomic.h
libs/common/atomic/src/: atomic.c  atomic_q.c  cae.c
libs/common/rpcmem/: CMakeLists.txt  Linux.min  Linux_deps.min  Makefile  UbuntuARM.min  UbuntuARM_deps.min  WinARM.min  android.min  android_deps.min  cmake_build.bash  hexagon.min  hexagon_deps.min  qnx.min
libs/common/rpcmem/inc/: rpcmem.h  rpcmem_qnx.h
libs/common/rpcmem/src/: rpcmem_WinARM.c  rpcmem_android.c  rpcmem_android_q.c  rpcmem_qnx.c  rpcmem_stub.c  verify.h
scripts/: Common_Walkthrough.py  Device_configuration.py  clone_project.py  cornerApp_walkthrough.py  cornerApp_walkthrough.sh  install_adsp_ps.py  install_dependencies.py  launch_hexagon_ide.sh  manage_plugins.py  push_adsp.py  run_remote_debug_agent.py  so_sym_verify.py  testsig.py  verify_debugger.py
test/common/test_util/: CMakeLists.txt  UbuntuARM.min  android_deps.min  cmake_build.bash  hexagon_deps.min
test/common/test_util/hexagon_Debug_dynamic_toolv83_v66/: HAP_debug_printf.o.dep  HAP_debug_printf_a_archiver.txt  sysmon_cachelock_client.o.dep  sysmon_cachelock_srv.o.dep  sysmon_vtcm_mgr_client.o.dep  sysmon_vtcm_mgr_srv.o.dep  test_util_a_archiver.txt  test_utils.o.dep
test/common/test_util/src/: HAP_debug_printf.c  pls.h  sysmon_cachelock_client.c  sysmon_cachelock_srv.c  sysmon_vtcm_mgr_client.c  sysmon_vtcm_mgr_srv.c  sysmon_vtcmmgr_int.h  test_utils.c
(+4214 files in other folders)
